# Pulse

./: .gitignore  CMakeLists.txt  README.md
src/: main.cpp
src/core/: ring_buffer.hpp  system_state.hpp
src/core/interfaces/: i_network_monitor.hpp  i_process_monitor.hpp  i_system_monitor.hpp
src/monitoring/: data_collector.cpp  data_collector.hpp
src/platform/windows/: windows_system_monitor.cpp  windows_system_monitor.hpp
src/ui/: application.cpp  application.h  application.hpp
src/ui/components/: graph_component.cpp  graph_component.hpp  layout_components.cpp  layout_components.hpp  metric_card.cpp  metric_card.hpp  table_component.cpp  table_component.hpp  text_components.cpp  text_components.hpp  ui_card.cpp  ui_card.hpp
src/ui/screens/: alerts_screen.cpp  alerts_screen.hpp  base_screen.cpp  base_screen.hpp  network_screen.cpp  network_screen.hpp  performance_screen.cpp  performance_screen.hpp  processes_screen.cpp  processes_screen.hpp
